--- a/www/app.css
+++ b/www/app.css
@@ -1,25 +1,30 @@
 @import url('https://fonts.googleapis.com/css?family=Kaushan+Script|Permanent+Marker');
 
 body {
-  background-image: url('atl1.jpg');
+  
+  background-image: url('bg.jpg');
   background-repeat: no-repeat;
   background-attachment: scroll;                  
   background-position: center;
   background-size: cover;
   text-align: center;
   
+  
 }
 
 h1{
-  font-family: 'Kaushan Script', sans-serif;
-  font-size: 4em; 
-  font-weight: normal;
   color: white;
+  font-family: 'Permanent Marker', sans-serif;
+  font-size: 7em; 
+  font-weight: normal;
+  
 }
 
 h2 {
   color: white;
-  font-family: 'Permanent Marker';
+  font-family: 'Kaushan Script';
+  background-color: #968686;
+  opacity: 0.7;
 }
 
 button {
@@ -31,20 +36,24 @@ button {
   font-size: 35px ;
   
 }
-      
-.input_area{
-  padding: 15px;
-}          
+
+.input_area {
+  margin: auto;
+}
+
+.shiny-input-container:not(.shiny-input-container-inline) {
+  width: 100%;
+}
 
 
 .form-control{
-       width: 100%;
+        
         text-align: center;
         padding: 25px 30px;
-        margin: 50px 50px; 
-        font-size: 100px;
+        margin: 50px 0px; 
+        font-size: 70px;
         border: none;
         outline: none;
-        color: red;
+        color: white;
         background-color: transparent;
 }
