--- a/www/app.css
+++ b/www/app.css
@@ -1,20 +1,33 @@
 @import url('https://fonts.googleapis.com/css?family=Kaushan+Script|Permanent+Marker|Patrick+Hand|Kalam');
 
-body {
-  
-  background-image: url('bg.jpg');
-  background-color: black;
-  background-repeat: no-repeat;
-  background-attachment: scroll;                  
-  background-position: center;
-  background-size: cover;
-  text-align: center;
-  
-  
+html {
+  height:100%;
 }
 
-h1{
-  color: white;
+body {
+  min-height: 100%;
+  position: relative;
+  background: url('bg.jpg') no-repeat center center fixed;
+  background-color: black;
+  background-size: cover;
+  text-align: center;
+}
+
+body::after {
+  content: '';
+  display: block;
+  height: 50px; /* Set same as footer's height */
+}
+
+.container-fluid .col-sm-12 {
+    padding-right: 0;
+    padding-left: 0;
+}
+
+h1 {
+  margin: auto;
+  color: #f1f1f1;
+  background: rgba(0, 0, 0, 0.3);
   font-family: 'Permanent Marker', sans-serif;
   font-size: 7em; 
   font-weight: normal;
@@ -22,21 +35,27 @@ h1{
 }
 
 h2 {
-  color: white;
+  margin: 10px auto 10px auto;
+  padding: 0 50px;
+  color: #f1f1f1;
+  background: rgba(0, 0, 0, 0.3);
   font-family: 'Kaushan Script';
-  background-color: #96868666;
-  
 }
 
 h3 {
+  display: table;
   color: white;
+  margin: 25px auto 10px auto;
+  padding: 5px 50px 5px 50px;
+  background: rgba(0, 0, 0, 0.53);
   font-family: 'Patrick Hand';
-  background-color: #96868666;
+  border-radius: 3px;
 }
 
 .bttn-block {
   font-family: 'Patrick Hand';
-  width: 60%;
+  font-weight: bold;
+  width: 250px;
   margin: auto;
   border: none;
   color: white;
@@ -46,14 +65,9 @@ h3 {
   
 }
 
-.input_area {
-  margin: auto;
-}
-
 .shiny-input-container:not(.shiny-input-container-inline) {
   width: 100%;
 }
-
 
 .datepicker{
   background: rgba(222, 222, 222, 0.6);
@@ -65,8 +79,13 @@ h3 {
   
 }
 
+.datepicker--nav-title i {
+  color: black;
+}
+
 .datepicker--day-name {
-  color: darkgrey;
+  color: black;
+  font-weight: bold;
 }  
 
 .datepicker--day-names {
@@ -89,25 +108,73 @@ h3 {
   margin-bottom: 30px;
 }
 
+
+.days {
+  color: #f1f1f1;
+  background: rgba(0, 0, 0, 0.3);
+  font-family: 'Kaushan Script', sans-serif;
+  font-size: 3em;
+  margin: 30px auto;
+  margin: 10px 5px;
+  padding: 10px 20px;
+}
+
+.setlist {
+  color: #f1f1f1;
+  background: rgba(0, 0, 0, 0.3);
+  font-family: 'Patrick Hand', sans-serif;
+  font-size: 2em;
+  margin: 30px auto;
+  margin: 10px 5px 0 5px;
+  padding: 10px 20px 0 20px;
+}
+
+.setlist-logo {
+  background-color: white;
+  border-radius: 10px;
+  padding: 5px;
+  width: 100px;
+  vertical-align: sub;
+  margin-left: 4px;
+}
+
+.tweet {
+  color: #f1f1f1;
+  font-family: 'Patrick Hand', sans-serif;
+  font-size: 1.4em;
+  margin-bottom: 50px;
+  background: rgba(0, 0, 0, 0.3);
+  padding: 10px 0;
+  margin-top: 0;
+}
+
+
+.twitter-share-button {
+  vertical-align: text-bottom;
+  margin-left: 5px;
+}
+
+
+
 .footer {
+  position: absolute;
+  text-align: center;
   font-family: Kalam;
   font-size: 1em;
-  color: white;
-  background-color: black;
-  position:absolute;
-  bottom:0;
-  text-align: center;
+  color: #f2f2f2;
+  background-color: rgba(0,0,0,0.5);
+  padding: 10px 0;
+  bottom: 0;
   width: 100%;
   
 }
 
-.-focus- datepicker--days
+.shiny-logo{
+  width: 25px;
+  vertical-align: text-bottom;
+  margin-left: 4px;
+}
 
-
- text-align: center;
-        padding: 25px 30px;
-        margin: 50px 0px; 
-        font-size: 70px;
-        
-        outline: none;
-        color: white;
+.footer > p{
+  margin: 0;
+}
